# actuarial-agent-evals

./: .clineignore  .gitignore  LICENSE  README.md  actuarial_integration_test.py  actuarial_test_harness.py  benchmark.json  benchmark.py  benchmark_CAS.json  benchmark_CAS.py  benchmark_friedland.py  benchmark_werner_modlin.py  harness.py  launch_all_tests.py  launch_one_integration_test.py  launch_one_unit_test.py  package-lock.json  rag installation  reference_friedland_dev_method.py  requirements.txt  run_tests.py  setup_cua.py  test.csv  test_cua.py  test_cursor_detection.py  test_image_fix.py  test_list.html  test_list.md
cua/: README.md  __init__.py  cursor_ui_agent.py
cua/actions/: __init__.py  automation.py
cua/config/: __init__.py  settings.py
cua/detection/: __init__.py  visual_detector.py
cua/integration/: __init__.py  harness_integration.py
methods/friedland_xyz_bf_method/: config.py  integration.py  steps.py  validation.py
methods/friedland_xyz_cc_method/: config.py  integration.py  steps.py  validation.py
methods/friedland_xyz_dev_method/: config.py  integration.py  steps.py  validation.py
methods/friedland_xyz_fs1_method/: __init__.py  config.py  integration.py  steps.py  validation.py
methods/friedland_xyz_fs2_method/: __init__.py  config.py  integration.py  steps.py  validation.py
methods/friedland_xyz_fs3_method/: config.py  integration.py  steps.py  validation.py
methods/werner_modlin_a/: config.py  integration.py  steps.py  (+1 more)
rag/: pyproject.toml  server.py
test_framework/: __init__.py  base.py  harness_base.py  method_config.py
(+101 files in other folders)
