[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langchain-text-splitters>=0.3.10",
    "langgraph>=0.6.6",
    "mcp[cli]>=1.13.1",
    "sentence-transformers>=5.1.0",
    "sqlite-vss>=0.1.2",
]
